Fix overlap of legal and made with

--- a/index.css
+++ b/index.css
@@ -33,6 +33,12 @@ a[href] {
   text-decoration: none;
 }
 
+#misc-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
 .bottom-left {
   position: absolute;
   left: 20px;
@@ -45,4 +51,5 @@ a[href] {
   bottom: 20px;
   right: 20px; 
   font-size: 0.5em;
+  margin-left: 100px;
 }
